# dynamicWebsite

./: README.md  dynamicWebsite.py  main.py  pyproject.toml  requirements.txt  rules
internal/: VariableEnums.py  apps.py  classes.py
templates/: main.html
