# pyproject.toml

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamicWebsite"
version = "1.3.1"
description = "A simple way to host web server bundled with websocket to send and receive live data, from client to server, and pass live HTML changes from server to client without having to refresh the page."

readme = "README.md"
authors = [{ name = "Bhindi", email = "bhaskarpanja93@gmail.com" },
           { name = "riyapuri0710", email = "riyapuri0710@gmail.com" }]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["website", "dynamic website", "update website", "live website", "change website", "websocket"]
requires-python = ">=3.6"
dependencies = ["randomisedString", "cryptography", "Flask", "flask_sock", "turbo_flask", "rateLimitedQueues"]

[project.urls]
Homepage = "https://github.com/BhaskarPanja93/dynamicWebsite"
